--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".ui.NoteEdit"
+            android:name=".ui.ParcelaEdit"
             android:exported="false" />
         <activity
-            android:name=".ui.Notepad"
+            android:name=".ui.ListadoParcelas"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
